--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <title>Scrap</title>
@@ -24,9 +24,9 @@
             }
 
             @font-face {
-                font-family: "Autumn";
-                src: url("Fonts/AutumnRegular.ttf");
-                font-weight: 900;
+                font-family: "Work Sans";
+                src: url("Fonts/WorkSans-Medium.ttf");
+                font-weight: 500;
             }
 
             *, html, body{
