--- a/index.html
+++ b/index.html
@@ -92,10 +92,19 @@
         <canvas id="gameCanvas" width="500" height="800"></canvas>
 
         <div class="absolute">
-            <textarea value="text"></textarea>
+            <div id="myFhile" style="left: 70vw; top: 70vh;" type="file"></div>
+
+            <textarea value="text" id="text-area"></textarea>
             <button id="export" style="left: 30vw; top: 60vh;">Export</button>
             <button id="import" style="left: 70vw; top: 60vh;">Import</button>
-            <button id="close" style="left: 50vw; top: 70vh;">Close</button>
+
+            <button id="save" onclick="saveFile()" style="left: 30vw; top: 70vh;">Export file</button>
+            <input id="myFile" style="margin-left: 50%; margin-top: 90%;" type="file">
+            <button style="left: 70vw; top: 70vh;" onclick="openFile()">Import file</button>
+
+            <button style="color: white; left: 50vw; top: 90vh; width: 85%">Select file for "Import file":</button>
+
+            <button id="close" style="left: 50vw; top: 80vh;">Close</button>
         </div>
 
         <script src="Scripts/breakinfinity.js"></script>
