--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
             <button id="close" style="left: 50vw; top: 80vh;">Close</button>
         </div>
+        <link rel="manifest" href="webmanifest.json" />
 
         <script src="Scripts/breakinfinity.js"></script>
         <script src="Scripts/graphemesplitter.js"></script>
