--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Scrap</title>
     <meta charset="utf-8" />
 
-    <link rel="manifest" href="webmanifest.json" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <style>
         @font-face {
             font-family: "Work Sans";
