--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Scrap</title>
     <meta charset="utf-8" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <link rel="manifest" href="manifest.webmanifest" />
     <style>
