--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <script src="Scripts/breakinfinity.js"></script>
         <script src="Scripts/graphemesplitter.js"></script>
         <script src="Scripts/utils.js"></script>
+        <script src="Scripts/pwa.js"></script>
         <script src="Scripts/numberformatter.js"></script>
         <script src="Scripts/preload.js"></script>
         <script src="Scripts/canvasui.js"></script>
