--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
+    <meta name="theme-color" content="#C8777F">
     <link rel="manifest" href="manifest.webmanifest" />
     <style>
         @font-face {
