--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="theme-color" content="#C8777F">
     <link rel="manifest" href="manifest.webmanifest" />
+
+    <!-- iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="fr29" />
+    <link rel="apple-touch-icon" href="Images/app-icon.png" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
     <style>
         @font-face {
             font-family: "Work Sans";
