--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <button style="color: white; left: 50vw; top: 90vh; width: 85%">Select file for "Import file":</button>
 
-        <button class="add-button" id="add-button">Add to home screen</button>
+        <button style="color: white; left: 50vw; top: 7vh; width: 85%" id="add-button">Add to home screen</button>
         <button id="close" style="left: 50vw; top: 80vh;">Close</button>
     </div>
 
