--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
         <button id="close" style="left: 50vw; top: 80vh;">Close</button>
     </div>
 
+    <audio id="audioPlayer"></audio>
+
     <script src="Scripts/breakinfinity.js"></script>
     <script src="Scripts/graphemesplitter.js"></script>
     <script src="Scripts/utils.js"></script>
