--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
 
     <audio id="audioPlayer"></audio>
 
+    <script src="Scripts/lang/translator.js"></script>
+    <script src="Scripts/lang/en.js"></script>
+    <script src="Scripts/lang/de.js"></script>
+
     <script src="Scripts/breakinfinity.js"></script>
     <script src="Scripts/graphemesplitter.js"></script>
     <script src="Scripts/utils.js"></script>
