Translations pt. 3: some russian

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     <script src="Scripts/lang/translator.js"></script>
     <script src="Scripts/lang/en.js"></script>
     <script src="Scripts/lang/de.js"></script>
+    <script src="Scripts/lang/ru.js"></script>
 
     <script src="Scripts/breakinfinity.js"></script>
     <script src="Scripts/graphemesplitter.js"></script>
