--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             font-weight: 900;
         }
 
+        @font-face {
+            font-family: "Semibold";
+            src: url("Fonts/OpenSans-Semibold.ttf");
+            font-weight: 900;
+        }
+
         *, html, body {
             margin: 0;
             padding: 0;
