fixed 2nd dim lags, shadows/cache, new images & more

--- a/index.html
+++ b/index.html
@@ -134,20 +134,20 @@
 </head>
 
 <body>
-    <canvas id="gameCanvas" width="500" height="800"></canvas>
+    <canvas id="gameCanvas" width="800" height="800"></canvas>
 
     <div class="absolute">
-        <div id="myFhile" style="left: 70vw; top: 70vh;" type="file"></div>
+        <div id="myFileDiv" style="left: 70vw; top: 70vh;" type="file"></div>
 
         <textarea value="text" id="text-area"></textarea>
         <button id="export" style="left: 30vw; top: 50vh;">Export</button>
         <button id="import" style="left: 70vw; top: 50vh;">Import</button>
 
         <button id="save" onclick="saveFile()" style="left: 30vw; top: 60vh;">Export file</button>
-        <input id="myFile" style="margin-left: 50%; margin-top: 90%;" type="file">
         <button style="left: 70vw; top: 60vh;" onclick="openFile()">Import file</button>
 
-        <button style="color: white; left: 50vw; top: 90vh; width: 85%">Select file for "Import file":</button>
+        <button style="color: black; left: 50vw; top: 90vh; width: 85%">Select file for "Import file":</button>
+        <div style="background-color:black; color: white; margin-left: 50%; top: 85%; width: 100%; height: 10%"><input id="myFile" type="file"></div>
 
         <button style="color: white; left: 50vw; top: 7vh; width: 85%" id="add-button">Add to home screen</button>
         <button id="close" style="left: 50vw; top: 70vh;">Close</button>
