--- a/index.html
+++ b/index.html
@@ -166,9 +166,10 @@
     <script src="Scripts/lang/de.js"></script>
     <script src="Scripts/lang/ru.js"></script>
 
-    <script src="Scripts/breakinfinity.js"></script>
-    <script src="Scripts/graphemesplitter.js"></script>
-    <script src="Scripts/utils.js"></script>
+    <script src="plugins/breakinfinity.js"></script>
+    <script src="plugins/graphemesplitter.js"></script>
+    <script src="plugins/utils.js"></script>
+
     <script src="Scripts/numberformatter.js"></script>
     <script src="Scripts/preload.js"></script>
     <script src="Scripts/pwa.js"></script>
