--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         }
 
         body {
+            touch-action: pan-x pan-y;
             background-color: black;
             font-family: Helvetica, Arial, sans-serif;
         }
