--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
 
         body {
-            touch-action: pan-x pan-y;
+            touch-action: none;
             background-color: black;
             font-family: Helvetica, Arial, sans-serif;
         }
