--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Scrap</title>
+    <title>SC2FMFR</title>
     <meta charset="utf-8" />
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -102,8 +102,6 @@
                 box-shadow: 1px 1px 0px black;
                 padding: 0.5vh;
             }
-
-
 
         div.copyGift {
             position: absolute;
