--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script src="plugins/graphemesplitter.js"></script>
     <script src="plugins/utils.js"></script>
 
+    <script src="Scripts/patch-notes.js"></script>
     <script src="Scripts/numberformatter.js"></script>
     <script src="Scripts/preload.js"></script>
     <script src="Scripts/pwa.js"></script>
