--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link rel="apple-touch-icon" href="Images/app-icon.png" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="Images/favicon/favicon.ico">
+
     <link href="main.css" rel="stylesheet">
 </head>
 
@@ -49,6 +55,9 @@
     <script src="Scripts/lang/en.js"></script>
     <script src="Scripts/lang/de.js"></script>
     <script src="Scripts/lang/ru.js"></script>
+    <script src="Scripts/lang/it.js"></script>
+    <script src="Scripts/lang/pt.js"></script>
+    <script src="Scripts/lang/ro.js"></script>
 
     <script src="plugins/breakinfinity.js"></script>
     <script src="plugins/graphemesplitter.js"></script>
