--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="Scripts/lang/en.js"></script>
     <script src="Scripts/lang/de.js"></script>
     <script src="Scripts/lang/ru.js"></script>
+    <script src="Scripts/lang/es.js"></script>
     <script src="Scripts/lang/it.js"></script>
     <script src="Scripts/lang/pt.js"></script>
     <script src="Scripts/lang/ro.js"></script>
